--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <commonsVfsVersion>2.0</commonsVfsVersion>
         <jide.version>3.5.15</jide.version>
         <slf4j-version>1.7.7</slf4j-version>
+        <felix-file-install-version>3.4.2</felix-file-install-version>
         <!-- End of external bundle version declarations -->
         
         <!-- Start of included core bundle version declarations -->   
@@ -672,6 +673,12 @@
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-mapper-lgpl</artifactId>
                 <version>1.7.9</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.fileinstall</artifactId>
+                <version>${felix-file-install-version}</version>
             </dependency>
             
             <dependency>
