moved session export/import functionality to separate module

--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,4 @@ extbundles/*
 /core/window-service-def/target/
 /core/igb-genoviz-ext/target/
 /plugins/plugin-manager/target/
+/plugins/session-manager/target/
