--- a/main/pom.xml
+++ b/main/pom.xml
@@ -73,6 +73,11 @@
         </dependency>
         <dependency>
             <groupId>com.lorainelab</groupId>
+            <artifactId>session-manager</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
             <artifactId>igb-preferences</artifactId>
             <scope>runtime</scope>
         </dependency>
