--- a/plugins/session-manager/pom.xml
+++ b/plugins/session-manager/pom.xml
@@ -7,37 +7,23 @@
         <version>8.4.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <groupId>com.affymetrix</groupId>
-    <artifactId>bookmark</artifactId>
-    <version>${bookmark-version}</version>
+
+    <groupId>com.lorainelab</groupId>
+    <artifactId>session-manager</artifactId>
+    <version>${session-manager-version}</version>
     <packaging>bundle</packaging>
 
-    <name>Bookmark</name>
-
-    <dependencies>
-        <dependency>
-            <groupId>fi.iki.elonen</groupId>
-            <artifactId>NanoHTTPD</artifactId>	
-            <scope>compile</scope>		
-        </dependency>		
+    <name>Session Manager</name>
+    
+    <dependencies>     
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>igbSwingExt</artifactId>
-            <scope>provided</scope>	
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>	
-            <scope>provided</scope>		
-        </dependency>		
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
+            <artifactId>igb</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>igb</artifactId>
+            <artifactId>igb-services-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -52,17 +38,7 @@
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>genoviz</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.affymetrix</groupId>
-            <artifactId>igb-services-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.main</artifactId>
+            <artifactId>igbSwingExt</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -77,9 +53,9 @@
             <scope>provided</scope>
         </dependency>
         <!--End of logging dependencies-->
-         <dependency>
-            <groupId>com.lorainelab</groupId>
-            <artifactId>igb-genoviz-extensions</artifactId>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -88,8 +64,33 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>igb-preferences</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.swinglabs</groupId>
             <artifactId>swing-layout</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>genoviz</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>igb-genoviz-extensions</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>bookmark</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -101,19 +102,15 @@
             </plugin>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>      
+            </plugin>     
             <plugin>
                 <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>				
+                <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
                 <configuration>
-                    <instructions>
-                        <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
-                        <Embed-Transitive>true</Embed-Transitive>       
+                    <instructions>    
                         <Import-Package>*</Import-Package>
-                        <Export-Package>com.affymetrix.igb.bookmarks.model,com.affymetrix.igb.bookmarks.service</Export-Package>
-                        <Bundle-Activator>com.affymetrix.igb.bookmarks.Activator</Bundle-Activator>                        
-                        <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
+                        <Export-Package/>                        
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Service-Component>*</Service-Component>
                     </instructions>
@@ -121,5 +118,4 @@
             </plugin>            
         </plugins>
     </build>
-
 </project>
