moved LinkControl class to proper module

--- a/core/weblinks/pom.xml
+++ b/core/weblinks/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>affymetrix-common</artifactId>
             <scope>provided</scope>           
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>igb-genoviz-extensions</artifactId>
+            <scope>provided</scope>     
+        </dependency>
     </dependencies>
 
     <build>
