--- a/main/src/main/resources/config.properties
+++ b/main/src/main/resources/config.properties
@@ -39,6 +39,7 @@ org.osgi.framework.system.packages.extra= \
  javax.swing, \
  javax.swing.plaf, \
  javax.swing.plaf.basic, \
+ javax.swing.plaf.metal, \
  javax.swing.table, \
  javax.swing.text, \
  javax.swing.tree, \
