--- a/pom.xml
+++ b/pom.xml
@@ -133,32 +133,20 @@
         <module>plugins/window-service-def</module>
         <module>plugins/PairedEndDataPreprocessor</module>        
         <module>plugins/ConsoleGui</module>
-        
-        <!-- start of dev plugin modules-->
-        <module>optionalPlugins/merge-annotation-operator</module>
-        <module>optionalPlugins/tutorial-helper</module>
-        <module>optionalPlugins/geometric-mean</module>
-        <module>optionalPlugins/igb-command-socket</module>                
-        <module>developmentPlugins/DASRegistryServerType</module>
-        <module>developmentPlugins/TableView</module>
-        <module>developmentPlugins/FindAnnotations</module>
-        <module>developmentPlugins/OverlapAnnotationOperator</module>
-        <module>developmentPlugins/SampleSelection</module>
-        <module>developmentPlugins/SearchModeSymmetryFilter</module>
-        <module>developmentPlugins/TallyHandler</module>
-        <module>developmentPlugins/ThousandGenomesServerType</module>
-        <module>developmentPlugins/TranscriptIsoform</module>
-        <module>developmentPlugins/ParentOperators</module>
-        <module>developmentPlugins/BAMIndexer</module>
-        <module>developmentPlugins/NCBIPrimer</module>                                 
-        <!-- end of dev plugin modules-->
-        
-        <module>main</module>
     </modules>
         
     <profiles>
-        <profile>
-            <id>externalBundles</id>
+        <profile> 
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>               
+                <module>main</module>
+            </modules>            
+        </profile>
+        <profile> 
+            <id>development</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
@@ -166,10 +154,8 @@
                 <module>optionalPlugins/merge-annotation-operator</module>
                 <module>optionalPlugins/tutorial-helper</module>
                 <module>optionalPlugins/geometric-mean</module>
-                <module>optionalPlugins/igb-command-socket</module>
-                
+                <module>optionalPlugins/igb-command-socket</module> 
                 <module>developmentPlugins/DASRegistryServerType</module>
-                <module>developmentPlugins/TableView</module>
                 <module>developmentPlugins/FindAnnotations</module>
                 <module>developmentPlugins/OverlapAnnotationOperator</module>                
                 <module>developmentPlugins/SampleSelection</module>
@@ -178,72 +164,21 @@
                 <module>developmentPlugins/ThousandGenomesServerType</module>
                 <module>developmentPlugins/TranscriptIsoform</module>               
                 <module>developmentPlugins/ParentOperators</module>
-                <module>developmentPlugins/BAMIndexer</module>
-                <module>developmentPlugins/NCBIPrimer</module>                
-            </modules>
+                <module>developmentPlugins/NCBIPrimer</module>
+                
+                <module>main</module>  <!-- declared last because this module builds the ext bundles obr xml-->
+            </modules>            
         </profile>
-        <profile> <!-- profile for jenkins -->
+        <profile> 
             <id>release</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
             <modules>
-                <!-- start of core modules-->
-                <module>core/heatmap-editor</module>
-                <module>core/common</module>
-                <module>core/genometry</module>
-                <module>core/igb</module>
-                <module>core/igb-swing-ext</module>
-                <module>core/igb-services-api</module>
-                <module>core/window-service</module>
-                <module>core/shared-lib-wrapper</module>
-                <module>core/logging-config</module>
-                <module>core/igb-genoviz-ext-api</module>
-                <module>plugins/ApolloLibrary</module>
-                <module>plugins/AnnotationTab</module>
-                <module>plugins/BigBedHandler</module>
-                <module>plugins/BigWigHandler</module>
-                <module>plugins/Bookmark</module>
-                <module>plugins/ExternalView</module>
-                <module>plugins/GraphTab</module>
-                <module>plugins/IGBScript</module>
-                <module>plugins/KeyWordSearch</module>
-                <module>plugins/NCBIBlast</module>
-                <module>plugins/PropertyView</module>
-                <module>plugins/RestrictionSites</module>
-                <module>plugins/SearchModeIdOrProps</module>
-                <module>plugins/SearchModeLucene</module>
-                <module>plugins/SearchView</module>
-                <module>plugins/SequenceViewer</module>
-                <module>plugins/Survey</module>
-                <module>plugins/Thresholding</module>
-                <module>plugins/Tutorial</module>
-                <module>plugins/Update</module>
-                <module>plugins/plugins_page</module>
-                <module>plugins/window-service-def</module>
-                <module>plugins/PairedEndDataPreprocessor</module>      
-                <module>plugins/ConsoleGui</module>                    
-                <!-- end of core modules-->
-                
-                <!-- start of dev plugin modules-->
                 <module>optionalPlugins/merge-annotation-operator</module>
                 <module>optionalPlugins/tutorial-helper</module>
                 <module>optionalPlugins/geometric-mean</module>
-                <module>optionalPlugins/igb-command-socket</module>                
-                <module>developmentPlugins/DASRegistryServerType</module>
-                <module>developmentPlugins/TableView</module>
-                <module>developmentPlugins/FindAnnotations</module>
-                <module>developmentPlugins/OverlapAnnotationOperator</module>
-                <module>developmentPlugins/SampleSelection</module>
-                <module>developmentPlugins/SearchModeSymmetryFilter</module>
-                <module>developmentPlugins/TallyHandler</module>
-                <module>developmentPlugins/ThousandGenomesServerType</module>
-                <module>developmentPlugins/TranscriptIsoform</module>
-                <module>developmentPlugins/ParentOperators</module>
-                <module>developmentPlugins/BAMIndexer</module>
-                <module>developmentPlugins/NCBIPrimer</module>                                 
-                <!-- end of dev plugin modules-->
-        
+                <module>optionalPlugins/igb-command-socket</module>                                            
                 <module>main</module>
             </modules>
         </profile>
