removed bundle activator and added declarative services annotations as a replacement for service registry

--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,4 @@ www/release_notes/images/Thumbs.db
 /core/igb-genoviz-ext/target/
 /plugins/plugin-manager/target/
 /plugins/session-manager/target/
+extbundles/
