--- a/optionalPlugins/tutorial-helper/pom.xml
+++ b/optionalPlugins/tutorial-helper/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>igbSwingExt</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>bndlib</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -71,14 +76,12 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>                
                 <extensions>true</extensions>
-                <configuration>
-                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>    
+                <configuration>                   
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Export-Package/>
-                        <Bundle-Activator>com.gene.tutorial-helper.Activator</Bundle-Activator>
-                        <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
                         <Bundle-Description>A plugin to allow the user to see widget ids to help develop tutorials</Bundle-Description>
+                        <Service-Component>*</Service-Component>
                     </instructions>
                 </configuration>
             </plugin>            
