--- a/core/igb-services-api/pom.xml
+++ b/core/igb-services-api/pom.xml
@@ -71,7 +71,8 @@
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
                         <Export-Package>
-                            com.lorainelab.igb.service.api
+                            com.lorainelab.igb.service.api,
+                            com.lorainelab.igb.service.search
                         </Export-Package>
                         <Import-Package>*</Import-Package>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
