--- a/plugins/KeyWordSearch/pom.xml
+++ b/plugins/KeyWordSearch/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>igb</artifactId>
+            <artifactId>igb-services-api</artifactId>
             <scope>provided</scope>
         </dependency>       
         <dependency>
