Weighted menu items code refactoring.

--- a/core/igb-swing-ext/pom.xml
+++ b/core/igb-swing-ext/pom.xml
@@ -40,6 +40,13 @@
             <artifactId>bndlib</artifactId>
             <scope>provided</scope>
         </dependency>
+         <!--Start of logging dependencies-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--End of logging dependencies-->
     </dependencies>
 
     <build>
