--- a/main/src/main/resources/config.properties
+++ b/main/src/main/resources/config.properties
@@ -129,3 +129,4 @@ felix.log.level=1
 
 #org.osgi.service.http.port=8080
 #obr.repository.url=http://felix.apache.org/obr/releases.xml
+org.osgi.framework.bootdelegation=org.netbeans.lib.profiler.server,org.netbeans.lib.profiler.server.*
