Moved keystroke module in separate plugin. Error while starting IGB

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,4 @@ www/release_notes/images/Thumbs.db
 /plugins/plugin-manager/target/
 /plugins/session-manager/target/
 extbundles/
+/plugins/keystroke/target/
