--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,7 @@
         <module>plugins/PairedEndDataPreprocessor</module>        
         <module>plugins/ConsoleGui</module>
         <module>plugins/session-manager</module>               
+        <module>plugins/keystroke</module>
     </modules>
 
     <profiles>
@@ -427,6 +428,11 @@
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>session-manager</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.lorainelab</groupId>
+                <artifactId>keystroke</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <!--End of plugin module dependencies-->
