--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ www/release_notes/images/Thumbs.db
 /core/igbSwingExt/target/
 /plugins/AnnotationTab/target/
 /plugins/Bookmark/target/
+/plugins/keystroke/target/
 /plugins/DASRegistryServerType/target/
 /plugins/RubyScript/target/
 /plugins/PythonScript/target/
