Code refactoring and renaming keystroke to Keybinding-registry

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,4 @@ www/release_notes/images/Thumbs.db
 /plugins/session-manager/target/
 extbundles/
 /plugins/keystroke/target/
+/plugins/Keybinding-registry/target/
