--- a/plugins/Keybinding-registry/pom.xml
+++ b/plugins/Keybinding-registry/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <groupId>com.lorainelab</groupId>
-    <artifactId>Keybinding-registry</artifactId>
+    <artifactId>keybinding-registry</artifactId>
     <packaging>bundle</packaging>
 
     <name>Keybinding-registry</name>
@@ -48,14 +48,14 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.affymetrix</groupId>
-            <artifactId>igb</artifactId>
-            <scope>provided</scope> 
-        </dependency>
-        <dependency>
             <groupId>com.jidesoft</groupId>
             <artifactId>jide-ultimate</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swing-layout</artifactId>
+            <version>1.0.3</version>
         </dependency>
     </dependencies>
 
