--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <jide.version>3.5.15</jide.version>
         <slf4j-version>1.7.7</slf4j-version>
         <felix-file-install-version>3.4.2</felix-file-install-version>
+        <miglayout-version>4.2</miglayout-version>
         <!-- End of external bundle version declarations -->
         
     </properties>
@@ -656,6 +657,16 @@
                 <groupId>org.swinglabs</groupId>
                 <artifactId>swing-layout</artifactId>
                 <version>1.0.3</version>
+            </dependency>
+            <dependency>
+                <groupId>com.miglayout</groupId>
+                <artifactId>miglayout-core</artifactId>
+                <version>${miglayout-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.miglayout</groupId>
+                <artifactId>miglayout-swing</artifactId>
+                <version>${miglayout-version}</version>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
