refactoring to isoloate the keystroke preferences loading into the keystroke binding module

--- a/plugins/Keybinding-registry/pom.xml
+++ b/plugins/Keybinding-registry/pom.xml
@@ -57,6 +57,16 @@
             <artifactId>shared-lib-wrapper</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>affymetrix-common</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
