changed Lock Tier Height to Lock Track Height

--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -216,8 +216,8 @@ depth=depth
 multTrackError=Must select only one track
 noTrackError=Must select a track
 setColorByScore=Set Range of Color by Score
-lockTierHeightAction=Lock Tier Height
-unlockTierHeightAction=Unlock Tier Height
+lockTierHeightAction=Lock Track Height
+unlockTierHeightAction=Unlock Track Height
 zoomOnSelected=Zoom to Selected
 toggleShowAsPaired=Show as Paired
 noGenomeSelectedTitle=No Genome Selected
