--- a/core/igb-services-api/pom.xml
+++ b/core/igb-services-api/pom.xml
@@ -51,6 +51,16 @@
             <artifactId>igb-genoviz-extensions</artifactId>
             <scope>provided</scope> 
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>bndlib</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -73,6 +83,7 @@
                         </Export-Package>
                         <Import-Package>*</Import-Package>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
+                        <Service-Component>*</Service-Component>
                     </instructions>
                 </configuration>
             </plugin>               
