--- a/core/igb/pom.xml
+++ b/core/igb/pom.xml
@@ -127,6 +127,12 @@
             <groupId>org.swinglabs</groupId>
             <artifactId>swing-layout</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>keyWordSearch</artifactId>
+            <version>8.4.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
