--- a/plugins/image-exporter/pom.xml
+++ b/plugins/image-exporter/pom.xml
@@ -7,42 +7,26 @@
         <version>8.4.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-
-    <groupId>com.affymetrix</groupId>
-    <artifactId>sequenceViewer</artifactId>
+    <groupId>com.lorainelab</groupId>
+    <artifactId>image-exporter</artifactId>
     <packaging>bundle</packaging>
 
-    <name>sequenceViewer</name>
+    <name>image-exporter</name>
 
     <dependencies>
-        <dependency>
-            <groupId>com.affymetrix</groupId>
-            <artifactId>igb</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.main</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.affymetrix</groupId>
-            <artifactId>igb-services</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.affymetrix</groupId>
-            <artifactId>genometry</artifactId>
-            <scope>provided</scope>
-        </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>genoviz</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>igb-genoviz-extensions</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>igbSwingExt</artifactId>
+            <artifactId>affymetrix-common</artifactId>
             <scope>provided</scope>
         </dependency>
         <!--Start of logging dependencies-->
@@ -53,8 +37,8 @@
         </dependency>
         <!--End of logging dependencies-->
         <dependency>
-            <groupId>com.lorainelab</groupId>
-            <artifactId>igb-genoviz-extensions</artifactId>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -63,8 +47,43 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.lorainelab</groupId>
-            <artifactId>image-exporter</artifactId>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>genometry</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>igb-services</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreesvg</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-swing</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swing-layout</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>igbSwingExt</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -85,7 +104,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Import-Package>*</Import-Package>
-                        <Export-Package/>
+                        <Export-Package>com.lorainelab.image.exporter.service</Export-Package>
                         <Service-Component>*</Service-Component>
                     </instructions>
                 </configuration>
