Toolbars dependency on keystroke view is removed.

--- a/plugins/Keybinding-registry/pom.xml
+++ b/plugins/Keybinding-registry/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>igbSwingExt</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.main</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <!--Start of logging dependencies-->
         <dependency>
             <groupId>org.slf4j</groupId>
