--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -74,7 +74,8 @@ clearGraphs=Clear Graphs
 closeSequenceViewer=Close Sequence Viewer
 saveTrackAction=Save Track As
 saveSelectedAnnotationAction=Save Selected Annotations as File
-addNewSpecies=Open Custom Genome
+addNewSpecies=Open Genome from File...
+openCustomGenomeMenuTitle=Open Genome from File
 exit=Exit
 
 #Export Menu
