manually merged bef21f7e148dbed7c77bd6406b33218942ee229c -- IGBF-479  --custom genome changes

--- a/core/igb/pom.xml
+++ b/core/igb/pom.xml
@@ -139,6 +139,11 @@
             <artifactId>igb-genoviz-extensions-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-swing</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
