--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -77,7 +77,8 @@ printWhole=Print Whole Frame
 export=Export
 saveTrackAction=Save Track As
 saveSelectedAnnotationAction=Save Selected Annotations as File
-addNewSpecies=Open Custom Genome
+addNewSpecies=Open Genome from File...
+openCustomGenomeMenuTitle=Open Genome from File
 exit=Exit
 
 #Export Menu
