--- a/core/shared-lib-wrapper/pom.xml
+++ b/core/shared-lib-wrapper/pom.xml
@@ -62,6 +62,14 @@
             <groupId>com.boxysystems</groupId>
             <artifactId>jgoogleanalytics</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-swing</artifactId>
+        </dependency>
     </dependencies>
 
     
@@ -240,7 +248,9 @@
                             org.jdesktop.swingx,
                             org.jdesktop.swingx.*,
                             com.boxysystems.jgoogleanalytics,
-                            com.boxysystems.jgoogleanalytics.*
+                            com.boxysystems.jgoogleanalytics.*,
+                            net.miginfocom.layout,
+                            net.miginfocom.swing
                         </Export-Package>
                     </instructions>
                     <archive>
