--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <genovizVersion>1.1.0</genovizVersion>
         <felixMainVersion>4.2.2</felixMainVersion>
         <felix-scr-version>1.8.2</felix-scr-version>
+        <miglayout-version>4.2</miglayout-version>
         <org.osgi.compendium-version>4.3.1</org.osgi.compendium-version>
         <bindlib-version>2.4.0</bindlib-version>
         <osgiObrServiceVersion>1.0.2</osgiObrServiceVersion>
@@ -603,6 +604,16 @@
                 <artifactId>swing-layout</artifactId>
                 <version>1.0.3</version>
             </dependency>
+            <dependency>
+                <groupId>com.miglayout</groupId>
+                <artifactId>miglayout-core</artifactId>
+                <version>${miglayout-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.miglayout</groupId>
+                <artifactId>miglayout-swing</artifactId>
+                <version>${miglayout-version}</version>
+          </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>genoviz</artifactId>
