added 23andMe snp converter plugin to optional plugins for a future release

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ extbundles/
 /plugins/keystroke/target/
 /plugins/Keybinding-registry/target/
 /plugins/image-exporter/target/
+/optionalPlugins/23andMe-snp-converter/target/
