--- a/main/pom.xml
+++ b/main/pom.xml
@@ -362,25 +362,59 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>                
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>
-                                index
-                            </goal>                        
-                        </goals>
-                        <phase>package</phase>
-                        <configuration>
-                            <obrRepository>${project.parent.basedir}/extbundles</obrRepository>     
-                            <mavenRepository>${project.parent.basedir}/extbundles</mavenRepository>                       
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>       
+            </plugin>                 
         </plugins>
     </build>
+    <profiles>
+        <profile> 
+            <id>development</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.felix</groupId>
+                        <artifactId>maven-bundle-plugin</artifactId>                
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>
+                                        index
+                                    </goal>                        
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>     
+                                    <mavenRepository>${project.parent.basedir}/extbundles</mavenRepository>                       
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin> 
+                </plugins>
+            </build>
+        </profile>
+        <profile> 
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.felix</groupId>
+                        <artifactId>maven-bundle-plugin</artifactId>                
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>
+                                        index
+                                    </goal>                        
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>     
+                                    <mavenRepository>${project.parent.basedir}/extbundles</mavenRepository>                       
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin> 
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
