fix for search result table missing gene name/title column information after tooltip refactoring

--- a/plugins/SearchView/src/main/resources/search.properties
+++ b/plugins/SearchView/src/main/resources/search.properties
@@ -16,7 +16,7 @@ noResults=0 results
 
 #columns
 searchTableID=ID
-searchTableGeneName=Gene Name
+searchTableTitle=Title
 searchTableDescription=Description
 searchTableTier=Track
 searchTableStart=Start
