updated search combobox text

--- a/plugins/SearchModeIdOrProps/src/main/resources/searchmodeidorprops.properties
+++ b/plugins/SearchModeIdOrProps/src/main/resources/searchmodeidorprops.properties
@@ -4,7 +4,7 @@ searchErrorShort={0}: Text is too short to allow remote search.
 searchErrorSyntax=Regular expression syntax error...\n{0}
 searchLocalResults={0}: {1} local matches
 searchNoResults=Found 0 matches
-searchRegexIDOrName=IDs or names
+searchRegexIDOrName=ID, Name, or Title
 searchRegexIDOrNameTF=IDs or names match string or Regular Expression
 searchRegexProps=Properties
 searchRegexPropsTF=Properties match string or Regular Expression
