--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ www/release_notes/images/Thumbs.db
 /plugins/Update/target/
 /main/target/
 /plugins/BigBedHandler/target/
+/plugins/plugins_page/target/
 /plugins/BigWigHandler/target/
 /plugins/BAMIndexer/target/
 /plugins/SampleSelection/target/
